Event based dispatcher (#54)
* This is an attempt to move closer to a half-async/half-sync architecture
* Move more of the protocol/receptor logic out of the websocket layer
* Add a synchronous ping api method
