# internal/controller/dispatcher.go
@@ -8,95 +8,8 @@ import (
 
 	"github.com/RedHatInsights/platform-receptor-controller/internal/platform/queue"
 
-	"github.com/RedHatInsights/platform-receptor-controller/internal/receptor/protocol"
 	kafka "github.com/segmentio/kafka-go"
 )
-
-type ResponseDispatcherFactory struct {
-	writer *kafka.Writer
-}
-
-func NewResponseDispatcherFactory(writer *kafka.Writer) *ResponseDispatcherFactory {
-	return &ResponseDispatcherFactory{
-		writer: writer,
-	}
-}
-
-func (fact *ResponseDispatcherFactory) NewDispatcher(account, nodeID string) *ResponseDispatcher {
-	log.Println("Creating a new response dispatcher")
-	return &ResponseDispatcher{
-		account: account,
-		nodeID:  nodeID,
-		writer:  fact.writer,
-	}
-}
-
-type ResponseDispatcher struct {
-	account string
-	nodeID  string
-	writer  *kafka.Writer
-}
-
-func (rd *ResponseDispatcher) GetKey() string {
-	return fmt.Sprintf("%s:%s", rd.account, rd.nodeID)
-}
-
-func (rd *ResponseDispatcher) DispatchResponse(ctx context.Context, m protocol.Message, receptorID string) error {
-	type ResponseMessage struct {
-		Account      string      `json:"account"`
-		Sender       string      `json:"sender"`
-		MessageType  string      `json:"message_type"`
-		MessageID    string      `json:"message_id"`
-		Payload      interface{} `json:"payload"`
-		Code         int         `json:"code"`
-		InResponseTo string      `json:"in_response_to"`
-		Serial       int         `json:"serial"`
-	}
-
-	if m.Type() != protocol.PayloadMessageType {
-		log.Printf("Unable to dispatch message (type: %d): %s", m.Type(), m)
-		return nil
-	}
-
-	payloadMessage, ok := m.(*protocol.PayloadMessage)
-	if !ok {
-		log.Println("Unable to convert message into PayloadMessage")
-		return nil
-	}
-
-	// verify this message was meant for this receptor/peer (probably want a uuid here)
-	if payloadMessage.RoutingInfo.Recipient != receptorID {
-		log.Println("Recieved message that was not intended for this node")
-		return nil
-	}
-
-	responseMessage := ResponseMessage{
-		Account:      rd.account,
-		Sender:       payloadMessage.RoutingInfo.Sender,
-		MessageID:    payloadMessage.Data.MessageID,
-		MessageType:  payloadMessage.Data.MessageType,
-		Payload:      payloadMessage.Data.RawPayload,
-		Code:         payloadMessage.Data.Code,
-		InResponseTo: payloadMessage.Data.InResponseTo,
-		Serial:       payloadMessage.Data.Serial,
-	}
-
-	log.Printf("Dispatching response:%+v", responseMessage)
-
-	jsonResponseMessage, err := json.Marshal(responseMessage)
-	if err != nil {
-		log.Println("JSON marshal of ResponseMessage failed, err:", err)
-		return nil
-	}
-
-	rd.writer.WriteMessages(ctx,
-		kafka.Message{
-			Key:   []byte(payloadMessage.Data.InResponseTo),
-			Value: jsonResponseMessage,
-		})
-
-	return nil
-}
 
 type MessageDispatcherFactory struct {
 	readerConfig *queue.ConsumerConfig
